k8s/harbor/namespace.yml
kind: Namespace
apiVersion: v1
metadata:
  name: local-harbor
  labels:
    name: local-harbor
